[MODORDSTOR-342] - Fixed unit test